@@ -29,6 +29,7 @@ https://github.com/elastic/beats/compare/v6.0.0-beta2...master[Check the HEAD di
 *Heartbeat*
 
 - Made the URL field of heartbeat aggregatable. {pull}6263[6263]
+- Use `match.Matcher` for checking heartbeat response bodies with regular expressions. {pull}6539[6539]
 
 *Metricbeat*
 
